--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -27,4 +27,14 @@ html {
 
 body {
   box-sizing: border-box;
+  font-size: $default-font-size;
+}
+
+a {
+  &,
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color: white;
+  }
 }
