--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,23 @@
 // COLORS
-// COLORS
-$gray-500: #2f3e46;
+$cold-gray-100: #e9eef1;
+$cold-gray-200: #cbd6dc;
+$cold-gray-300: #acbec8;
+$cold-gray-400: #8ea6b3;
+$cold-gray-500: #6f8e9f;
+$cold-gray-600: #587483;
+$cold-gray-700: #435965;
+$cold-gray-800: #2f3e46;
+$cold-gray-900: #1b2327;
 
-$green-500: #a1d507;
+$green-100: #f6fedd;
+$green-200: #e8fcac;
+$green-300: #dafb7a;
+$green-400: #cdf949;
+$green-500: #bff718;
+$green-600: #a1d507;
+$green-700: #7ca405;
+$green-800: #567204;
+$green-900: #314102;
 
 // FONT
 $default-font-size: 1.6rem;
