--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,15 +1,38 @@
 @import '../../sass/variables';
 
 .navbar {
-  padding: 1rem 3rem;
+  padding: 0 3rem;
   display: flex;
-  background-color: $gray-500;
+  background-color: $cold-gray-800;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 8rem;
+  min-height: 85px;
+}
+
+.logoText {
+  width: 100%;
+  text-align: center;
+  letter-spacing: 2px;
+  font-size: 1.2rem;
+  transition: all 0.2s;
+
+  .logo:hover & {
+    transform: scale(1.1);
+  }
+}
+
+.plus {
+  color: $green-500;
+  font-size: 1.4rem;
 }
 
 .container {
   width: 100%;
+  height: 100%;
   max-width: 160rem;
   display: flex;
   justify-content: space-between;
@@ -19,7 +42,47 @@
 .menu {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  height: 100%;
   width: 100%;
   max-width: 50rem;
-  font-size: 2.2rem;
+  font-size: 2rem;
+}
+
+.link {
+  color: $cold-gray-400;
+  transition: all 0.2s ease-in;
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  padding: 0 1rem;
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: 0px;
+    left: 0;
+    background-color: $green-500;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+
+  &:hover {
+    color: $cold-gray-100;
+    background-color: $cold-gray-700;
+
+    &:after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+}
+
+.active {
+  color: white;
+  background-color: $cold-gray-700;
 }
