add blue color to variables

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -19,5 +19,15 @@ $green-700: #7ca405;
 $green-800: #567204;
 $green-900: #314102;
 
+$blue-100: #ccf4ff;
+$blue-200: #99e9ff;
+$blue-300: #66dfff;
+$blue-400: #33d4ff;
+$blue-500: #00c9ff;
+$blue-600: #00a1cc;
+$blue-700: #007999;
+$blue-800: #005066;
+$blue-900: #002833;
+
 // FONT
 $default-font-size: 1.6rem;
