--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -85,4 +85,16 @@
 .active {
   color: white;
   background-color: $cold-gray-700;
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 0px;
+    left: 0;
+    background-color: $green-500;
+    transition: transform 0.25s ease-out;
+    transform-origin: bottom left;
+    transform: scaleX(1);
+  }
 }
