cta button ::after style addition

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -70,17 +70,37 @@
   font-weight: 500;
   letter-spacing: 2px;
   transition: all 0.2s;
+  position: relative;
 
   &:hover {
     color: white;
     background-color: $green-600;
     transform: translateY(-4px);
     box-shadow: 2px 5px 10px #888888;
+
+    &::after {
+      background-color: $green-500;
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
   }
 
   &:active {
     transform: translateY(-1px);
     box-shadow: 1px 3px 5px #888888;
+  }
+
+  &::after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
   }
 }
 
