--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -11,6 +11,7 @@
   width: 100%;
   height: 8rem;
   min-height: 85px;
+  z-index: 10;
 }
 
 .container {
@@ -56,7 +57,8 @@
     transition: transform 0.25s ease-out;
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: $cold-gray-100;
     background-color: $cold-gray-700;
 
