--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,5 +29,8 @@ $blue-700: #007999;
 $blue-800: #005066;
 $blue-900: #002833;
 
+$facebook-gradient: linear-gradient(to bottom, #00c6ff, #0072ff);
+$instagram-gradient: linear-gradient(45deg, #833ab4, #fd1d1d, #fcb045);
+
 // FONT
 $default-font-size: 1.6rem;
