--- a/src/components/atoms/socialmedia-button.module.scss
+++ b/src/components/atoms/socialmedia-button.module.scss
@@ -15,6 +15,7 @@
   &:hover {
     color: white;
     transform: translateY(-2px);
+
     & .facebook {
       background-image: $facebook-gradient;
     }
@@ -22,17 +23,22 @@
     & .instagram {
       background-image: $instagram-gradient;
     }
+
+    & .icon {
+      transform: scale(0.9);
+    }
   }
 }
 .icon {
-  height: 100%;
-  width: 100%;
+  height: 110%;
+  width: 110%;
+  transition: transform 0.4s ease-in;
 }
 
 .facebook {
-  padding: 8px 2px 0;
+  padding: 8px 4px 0 0;
 }
 
 .instagram {
-  padding: 1px 3px 0 5px;
+  padding: 3px 4px 1px 4px;
 }
