--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -7,3 +7,24 @@ a {
   text-decoration: none;
   color: white;
 }
+
+.title {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  text-align: center;
+
+  background-image: linear-gradient(to right, $blue-600, $green-500);
+  background-clip: text;
+  -webkit-background-clip: text;
+
+  color: transparent;
+  transition: all 0.2s;
+}
+
+.text {
+  color: $cold-gray-700;
+  font-weight: 400;
+}
