--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -31,6 +31,7 @@ $blue-900: #002833;
 
 $facebook-gradient: linear-gradient(to bottom, #00c6ff, #0072ff);
 $instagram-gradient: linear-gradient(45deg, #833ab4, #fd1d1d, #fcb045);
+$main-gradient: linear-gradient(to right, $blue-600, $green-500);
 
 // FONT
 $default-font-size: 1.6rem;
