footer remove carrers link

--- a/src/components/organisms/footer.module.scss
+++ b/src/components/organisms/footer.module.scss
@@ -28,7 +28,7 @@
 .menu {
   padding: 1rem 2rem;
   width: 80%;
-  max-width: 600px;
+  max-width: 50rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
