--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,6 +29,16 @@ $blue-700: #007999;
 $blue-800: #005066;
 $blue-900: #002833;
 
+$red-100: #ffe7e7;
+$red-200: #feb5b5;
+$red-300: #fe8282;
+$red-400: #fd5050;
+$red-500: #fd1d1d;
+$red-600: #e50202;
+$red-700: #b20202;
+$red-800: #800101;
+$red-900: #4d0101;
+
 $facebook-gradient: linear-gradient(to bottom, #00c6ff, #0072ff);
 $instagram-gradient: linear-gradient(45deg, #833ab4, #fd1d1d, #fcb045);
 $main-gradient: linear-gradient(to right, $blue-600, $green-500);
