--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -20,7 +20,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  // background-attachment: fixed;
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
@@ -32,8 +31,8 @@
   width: 30vw;
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
-  margin-bottom: 24rem;
+  align-self: center;
+  margin-top: 15rem;
 }
 
 .maintitle {
@@ -51,56 +50,13 @@
 
 .hero__cta {
   width: 70%;
+  max-width: 25rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 8rem;
+  margin-top: 6rem;
 }
 
-.btn__main {
-  color: $green-600;
-  padding: 1rem 3rem;
-  background-color: white;
-  border: 3px solid $green-600;
-  border-radius: 4rem;
-  font-size: 2.4rem;
-  font-weight: 500;
-  letter-spacing: 2px;
-  transition: all 0.2s;
-  position: relative;
-
-  &:hover {
-    color: white;
-    background-color: $green-600;
-    transform: translateY(-4px);
-    box-shadow: 2px 5px 10px #888888;
-
-    &::after {
-      background-color: $green-500;
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 1px 3px 5px #888888;
-  }
-
-  &::after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-}
-
-.section__about {
+.banner {
   height: 50vh;
   background-color: $cold-gray-400;
 
@@ -113,25 +69,124 @@
   color: white;
 }
 
-.section__features {
+.features {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  padding: 3rem 0 10rem;
+
+  &__banner {
+    font-size: 2rem;
+    max-width: 90rem;
+    text-align: center;
+    line-height: 1.5;
+  }
+
+  &__container {
+    margin-top: 3rem;
+    display: flex;
+    width: 90%;
+    max-width: 120rem;
+    justify-content: space-around;
+    align-items: stretch;
+  }
 }
 
-.features__banner {
-  font-size: 2rem;
-  max-width: 900px;
-  text-align: center;
-  line-height: 1.5;
-}
-
-.features__container {
-  margin-top: 3rem;
+.shift {
   display: flex;
-  width: 90%;
-  max-width: 1200px;
-  justify-content: space-around;
-  align-items: stretch;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fafafa;
+  height: 95vh;
+
+  &__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  &__text {
+    &__group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+      line-height: 1.5;
+      width: 100%;
+    }
+
+    &__1 {
+      font-size: 2.6rem;
+      color: $blue-700;
+    }
+
+    &__2 {
+      font-size: 2rem;
+      color: $green-600;
+    }
+
+    &__3 {
+      font-size: 2rem;
+      color: $red-500;
+    }
+  }
+
+  &__menu {
+    padding: 1rem;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 2.2rem;
+  }
+
+  &__img {
+    &__container {
+      overflow: hidden;
+      @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+      }
+    }
+
+    width: 60vw;
+    height: 100%;
+    transition: all 1s ease-out;
+    transform: scale(1.1);
+
+    background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/boulder-1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 10% 50%;
+
+    &:hover {
+      transform: scale(1);
+    }
+  }
+
+  &__content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: -10rem;
+  }
+}
+
+.testimonies {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
+
+  &__video {
+    width: 100%;
+  }
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
 }
