--- a/src/components/molecules/feature-box.module.scss
+++ b/src/components/molecules/feature-box.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 220px;
+  max-width: 22rem;
   padding: 5rem 2.5rem;
 
   background-color: $cold-gray-100;
