--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -41,7 +41,7 @@ $red-900: #4d0101;
 
 $facebook-gradient: linear-gradient(to bottom, #00c6ff, #0072ff);
 $instagram-gradient: linear-gradient(45deg, #833ab4, #fd1d1d, #fcb045);
-$main-gradient: linear-gradient(to right, $blue-600, $green-500);
+$rainbow-blue-gradient: linear-gradient(to right, $blue-600, $green-500);
 
 // FONT
 $default-font-size: 1.6rem;
