add stars to review card

--- a/src/components/organisms/footer.module.scss
+++ b/src/components/organisms/footer.module.scss
@@ -14,7 +14,7 @@
 .banner {
   color: white;
   letter-spacing: 4px;
-  padding: 1rem;
+  padding: 0 1rem 2rem;
 }
 
 .logo {
@@ -23,8 +23,8 @@
 }
 
 .social {
-  margin-left: 2rem;
-  margin-bottom: 4rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
   max-width: 10rem;
   display: flex;
