--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,5 @@
 @import '../sass/variables';
+@import '../sass/mixins';
 
 .main {
   display: flex;
@@ -204,6 +205,10 @@
 
   &__carousel {
     width: 90%;
+
+    @include respond(phone) {
+      max-width: 40rem;
+    }
   }
 }
 
