--- a/src/components/molecules/review-card.module.scss
+++ b/src/components/molecules/review-card.module.scss
@@ -15,10 +15,10 @@
   background-color: rgba(255, 255, 255, 0.85);
   color: $cold-gray-700;
 }
-.icon {
+.quotes {
   position: absolute;
-  top: 5rem;
-  left: 2rem;
+  top: 3rem;
+  left: 3rem;
   height: 5rem;
   width: 5rem;
   color: $cold-gray-300;
@@ -30,6 +30,13 @@
   margin: 0 auto;
   border-radius: 100%;
   overflow: hidden;
+  margin-bottom: 1rem;
+}
+.stars {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
   margin-bottom: 2rem;
 }
 .content {
