--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,13 +1,22 @@
-@import '../sass/variables';
-@import '../sass/mixins';
+@import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .main {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-  min-height: 100vh;
+  min-height: 95vh;
+
+  @include respond(tab-port) {
+    justify-content: center;
+  }
+
+  @include respond(big-desktop) {
+    max-width: 180rem;
+  }
 }
 
 .hero__img {
@@ -26,6 +35,18 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
   }
+
+  @include respond(tab-port) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+  }
 }
 
 .hero__banner {
@@ -34,13 +55,15 @@
   flex-direction: column;
   align-self: center;
   margin-top: 15rem;
-}
 
-.maintitle {
-  font-size: 5rem;
-  letter-spacing: 4px;
-  font-weight: 300;
-  padding: 4rem;
+  @include respond(tab-port) {
+    height: 100%;
+    width: 100%;
+    max-width: 40rem;
+    border-radius: 1rem;
+    padding: 3rem;
+    color: white;
+  }
 }
 
 .subtitle {
@@ -55,25 +78,32 @@
   display: flex;
   justify-content: center;
   margin-top: 6rem;
+  @include respond(tab-port) {
+    margin-left: 2rem;
+  }
 }
 
 .banner,
 .banner__2 {
   height: 50vh;
   background-color: $cold-gray-400;
-
+  letter-spacing: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 6rem;
+  font-size: 5rem;
   text-align: center;
   font-weight: 300;
   color: white;
+  padding: 4rem;
+  @include respond(tab-port) {
+    height: 35vh;
+    font-size: 3.5rem;
+  }
 }
 
 .banner__2 {
-  height: 60vh;
-  margin-top: -4%;
+  margin-top: -4.55rem;
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 92%);
     clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 92%);
@@ -100,6 +130,11 @@
     max-width: 120rem;
     justify-content: space-around;
     align-items: stretch;
+    @include respond(tab-port) {
+      flex-direction: column;
+      align-items: center;
+      height: 140rem;
+    }
   }
 }
 
@@ -109,12 +144,20 @@
   align-items: center;
   background-color: #fafafa;
   height: 95vh;
+  @include respond(tab-port) {
+    background-color: transparent;
+  }
 
   &__container {
+    position: relative;
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: space-between;
+    @include respond(tab-port) {
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &__text {
@@ -159,6 +202,20 @@
         -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
         clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
       }
+
+      @include respond(tab-port) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+          -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+      }
     }
 
     width: 60vw;
@@ -174,6 +231,15 @@
     &:hover {
       transform: scale(1);
     }
+
+    @include respond(phone) {
+      width: 100%;
+      background-position: center;
+    }
+    @include respond(tab-port) {
+      width: 100%;
+      background-attachment: fixed;
+    }
   }
 
   &__content {
@@ -182,6 +248,16 @@
     flex-direction: column;
     align-items: center;
     margin-right: -10rem;
+
+    @include respond(phone) {
+      width: 80%;
+    }
+
+    @include respond(tab-port) {
+      background-color: rgba(255, 255, 255, 0.85);
+      margin-right: 0;
+      border-radius: 4px;
+    }
   }
 }
 
@@ -190,7 +266,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  margin-top: -5%;
+  margin-top: -4.5rem;
 
   background-image: linear-gradient(to right bottom, rgba(120, 2, 6, 0.5), rgba(6, 17, 97, 0.7)), url('/images/ye-nature-2.jpg');
   background-repeat: no-repeat;
@@ -217,7 +293,7 @@
   flex-direction: column;
   align-items: center;
   height: 80vh;
-  margin-top: -2%;
+  margin-top: -4rem;
 
   &__map {
     width: 100%;
