--- a/src/components/atoms/button.module.scss
+++ b/src/components/atoms/button.module.scss
@@ -1,9 +1,10 @@
 @import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .main {
   color: $green-600;
   padding: 1rem 3rem;
-  background-color: white;
+  background-color: transparent;
   border: 3px solid $green-600;
   border-radius: 4rem;
   font-size: 2.4rem;
@@ -41,6 +42,10 @@
     left: 0;
     z-index: -1;
     transition: all 0.4s;
+  }
+  @include respond(tab-port) {
+    color: $green-500;
+    border: 3px solid $green-500;
   }
 }
 
