--- a/src/components/organisms/footer.module.scss
+++ b/src/components/organisms/footer.module.scss
@@ -1,4 +1,5 @@
 @import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .container {
   font-size: 1.6rem;
@@ -39,6 +40,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  @include respond(phone) {
+    font-size: 1.4rem;
+    width: 100%;
+    justify-content: space-between;
+  }
 }
 
 .link {
