--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -1,4 +1,5 @@
 @import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .navbar {
   padding: 0 3rem;
@@ -17,7 +18,7 @@
 .container {
   width: 100%;
   height: 100%;
-  max-width: 160rem;
+  max-width: 140rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,6 +32,10 @@
   width: 100%;
   max-width: 50rem;
   font-size: 2rem;
+  @include respond(phone) {
+    font-size: 1.6rem;
+    max-width: 40rem;
+  }
 }
 
 .link {
@@ -43,6 +48,10 @@
   height: 100%;
   padding: 0 1rem;
   flex: 1 1 auto;
+
+  @include respond(phone) {
+    padding: 0;
+  }
 
   &:after {
     content: '';
