--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -35,6 +35,6 @@ ORDER: Base + typography > general layout + grid > page layout > components
   @if $breakpoint == big-desktop {
     @media only screen and (min-width: 112.5em) {
       @content;
-    } //1800
+    } //1800px
   }
 }
