--- a/src/components/molecules/review-card.module.scss
+++ b/src/components/molecules/review-card.module.scss
@@ -7,8 +7,8 @@
   align-items: center;
   justify-content: center;
   padding: 3rem;
-
   margin: 0 3rem;
+  max-width: 45rem;
 
   border-radius: 3px;
   border-bottom: 3px solid $green-600;
