--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -8,11 +8,14 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
   width: 100%;
   height: 8rem;
   min-height: 8.5rem;
   z-index: 10;
+
+  @include respond(phone) {
+    padding: 0 1rem;
+  }
 }
 
 .container {
@@ -34,7 +37,7 @@
   font-size: 2rem;
   @include respond(phone) {
     font-size: 1.6rem;
-    max-width: 40rem;
+    max-width: 30rem;
   }
 }
 
