--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -265,7 +265,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 80vh;
+  height: 70rem;
   margin-top: -4.5rem;
 
   background-image: linear-gradient(to right bottom, rgba(120, 2, 6, 0.5), rgba(6, 17, 97, 0.7)), url('/images/ye-nature-2.jpg');
@@ -285,8 +285,9 @@
 
   &__carousel {
     width: 90%;
+    max-width: 100rem;
 
-    @include respond(tab-land) {
+    @include respond(tab-port) {
       max-width: 45rem;
     }
   }
