--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -1,1 +1,15 @@
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.1);
+  }
 
+  85% {
+    transform: scale(1.4);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
