--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,6 @@
 @import '/src/sass/variables';
 @import '/src/sass/mixins';
+@import '/src/sass/animations';
 
 .main {
   position: relative;
@@ -7,8 +8,9 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
   min-height: 95vh;
+
+  overflow: hidden;
 
   @include respond(tab-port) {
     justify-content: center;
@@ -22,7 +24,7 @@
 .hero__img {
   position: relative;
   z-index: -1;
-  width: 70vw;
+  width: 100%;
   height: 100vh;
   transition: all 0.2s ease;
 
@@ -50,11 +52,12 @@
 }
 
 .hero__banner {
-  width: 30vw;
+  width: 45vw;
   display: flex;
   flex-direction: column;
   align-self: center;
   margin-top: 15rem;
+  // transform: translateX(50rem);
 
   @include respond(tab-port) {
     height: 100%;
@@ -70,6 +73,13 @@
   font-size: 5rem;
   letter-spacing: 1px;
   font-weight: 300;
+
+  &__animate__1 {
+    animation: moveLeft 0.8s cubic-bezier(0.12, 0.54, 0.29, 0.99);
+  }
+  &__animate__2 {
+    animation: moveLeft 0.8s cubic-bezier(0.12, 0.54, 0.29, 0.99) 0.4s backwards;
+  }
 }
 
 .hero__cta {
@@ -80,6 +90,10 @@
   margin-top: 6rem;
   @include respond(tab-port) {
     margin-left: 2rem;
+  }
+
+  &__animation {
+    animation: fadeIn 0.4s ease-out 1.2s backwards, pulse 10s ease-out infinite;
   }
 }
 
