--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -1,5 +1,6 @@
 @import '/src/sass/variables';
 @import '/src/sass/mixins';
+@import '/src/sass/animations';
 
 .navbar {
   padding: 0 3rem;
@@ -12,6 +13,7 @@
   height: 8rem;
   min-height: 8.5rem;
   z-index: 10;
+  animation: moveDown 0.6s ease 0.3s backwards;
 
   @include respond(phone) {
     padding: 0 1rem;
