--- a/src/app/prices/page.module.scss
+++ b/src/app/prices/page.module.scss
@@ -1,14 +1,51 @@
-.section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+@import '/src/sass/variables';
 
-  background-image: linear-gradient(to right bottom, rgba(120, 2, 6, 0.5), rgba(6, 17, 97, 0.7)), url('/images/ruta-2.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top;
-  background-attachment: fixed;
+.section {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  &__content {
+    width: 50%;
+  }
+
+  &__title {
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
+  &__subtitle {
+    font-size: 2.2rem;
+    padding: 1rem;
+    margin-top: 1rem;
+  }
+  &__img {
+    height: 100vh;
+    width: 50%;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+  }
+  &__price {
+    text-align: center;
+    color: $green-600;
+    font-weight: 600;
+  }
+}
+
+.climbing__img {
+  background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/ruta-3.jpg');
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
+.yoga__img {
+  background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/yoga-1.jpg');
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+  }
 }
