--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -9,6 +9,8 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 8rem;
   min-height: 8.5rem;
