--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -9,15 +9,20 @@
   justify-content: center;
   align-items: center;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 8rem;
   min-height: 8.5rem;
   z-index: 10;
-  animation: moveDown 0.6s ease 0.3s backwards;
 
   @include respond(phone) {
     padding: 0 1rem;
   }
+}
+
+.animate {
+  animation: moveDown 0.6s ease 0.3s backwards;
 }
 
 .container {
