--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -23,15 +23,11 @@
 
 .hero__img {
   position: relative;
-  z-index: -1;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 65%;
   height: 100vh;
-  transition: all 0.2s ease;
-
-  background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/chalk.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
@@ -209,49 +205,37 @@
   }
 
   &__img {
-    &__container {
-      overflow: hidden;
-      @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-        -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
-        clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
-      }
-
-      @include respond(tab-port) {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-
-        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-          -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-        }
-      }
-    }
-
+    position: relative;
     width: 60vw;
     height: 100%;
-    transition: all 1s ease-out;
-    transform: scale(1.1);
+    overflow: hidden;
 
-    background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/boulder-1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 10% 50%;
+    & img {
+      transform: scale(1.1);
+      transition: all 1s ease-out;
+    }
 
-    &:hover {
+    &:hover img {
       transform: scale(1);
     }
 
-    @include respond(phone) {
-      width: 100%;
-      background-position: center;
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+      clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
     }
+
     @include respond(tab-port) {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      background-attachment: fixed;
+      height: 100%;
+      z-index: -1;
+
+      @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      }
     }
   }
 
@@ -275,17 +259,21 @@
 }
 
 .testimonies {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 70rem;
   margin-top: -4.5rem;
 
-  background-image: linear-gradient(to right bottom, rgba(120, 2, 6, 0.5), rgba(6, 17, 97, 0.7)), url('/images/ye-nature-2.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-  background-attachment: fixed;
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 4%, 100% 100%, 0 92%);
