--- a/src/components/atoms/button.module.scss
+++ b/src/components/atoms/button.module.scss
@@ -24,6 +24,9 @@
       transform: scaleX(1.4) scaleY(1.6);
       opacity: 0;
     }
+    @include respond(tab-port) {
+      border: 3px solid $green-600;
+    }
   }
 
   &:active {
@@ -43,6 +46,7 @@
     z-index: -1;
     transition: all 0.4s;
   }
+
   @include respond(tab-port) {
     color: $green-500;
     border: 3px solid $green-500;
