--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -1,28 +1,24 @@
 @import '/src/sass/variables';
 @import '/src/sass/mixins';
-@import '/src/sass/animations';
 
 .navbar {
+  position: fixed;
   padding: 0 3rem;
   display: flex;
   background-color: $cold-gray-800;
   justify-content: center;
   align-items: center;
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 8rem;
   min-height: 8.5rem;
   z-index: 10;
+  transition: all 0.2s ease-out;
 
   @include respond(phone) {
     padding: 0 1rem;
   }
-}
-
-.animate {
-  animation: moveDown 0.6s ease 0.3s backwards;
 }
 
 .container {
