--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -79,3 +79,13 @@
     transform: scale(1);
   }
 }
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(1.08);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
