big desktop layout

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 95vh;
+  background-color: white;
 
   overflow: hidden;
 
@@ -129,6 +130,7 @@
   flex-direction: column;
   align-items: center;
   padding: 3rem 0 10rem;
+  background-color: white;
 
   &__banner {
     font-size: 2rem;
