--- a/src/components/organisms/navbar.module.scss
+++ b/src/components/organisms/navbar.module.scss
@@ -24,7 +24,7 @@
 .container {
   width: 100%;
   height: 100%;
-  max-width: 140rem;
+  max-width: 1600px;
   display: flex;
   justify-content: space-between;
   align-items: center;
