--- a/src/components/atoms/whatsapp-button.module.scss
+++ b/src/components/atoms/whatsapp-button.module.scss
@@ -2,9 +2,9 @@
 
 .container {
   position: fixed;
-  right: 6rem;
+  right: 4rem;
   bottom: 4rem;
-  z-index: 100;
+  z-index: 10;
 }
 
 .link {
@@ -17,10 +17,9 @@
 }
 
 .icon {
-  width: 100%;
-  height: auto;
+  width: 5.5rem;
+  height: 5.5rem;
   transition: all 0.2s;
-
   animation: popIn 0.2s ease-out 2.5s;
   animation-fill-mode: backwards;
 
