--- a/src/components/organisms/navbar/mobile-menu.module.scss
+++ b/src/components/organisms/navbar/mobile-menu.module.scss
@@ -3,7 +3,6 @@
 .container {
   position: relative;
   margin-right: 1.5rem;
-  overflow: hidden;
 }
 
 .hamburguerBtn {
@@ -76,12 +75,12 @@
   height: 3.5rem;
   width: 3.5rem;
   border-radius: 50%;
-  position: fixed;
+  position: absolute;
   z-index: 100;
-  top: 2.5rem;
-  right: 2.8rem;
+  top: 2px;
+  right: 2px;
   background-image: $rainbow-blue-gradient;
-  transition: all 0.3s ease-out;
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 .activeBackground {
@@ -96,17 +95,40 @@
   transform: translate(-50%, -50%);
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   width: 0%;
   opacity: 0;
 
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .activeMenu {
   width: 100%;
   opacity: 1;
   left: 50%;
+}
+
+.link {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  font-weight: 300;
+  letter-spacing: 4px;
+  padding: 1rem 3rem;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
+  background-size: 220%;
+  transition: all 0.4s;
+
+  &:not(:last-child) {
+    margin-bottom: 1.8rem;
+  }
+
+  &:hover,
+  &:active {
+    background-position: 100%;
+    color: $green-600;
+    transform: translateX(1rem);
+  }
 }
