--- a/src/app/prices/page.module.scss
+++ b/src/app/prices/page.module.scss
@@ -1,14 +1,30 @@
 @import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .section {
-  height: 100vh;
+  height: fit-content;
   display: flex;
   flex-direction: row;
   align-items: center;
   background-color: white;
+  @include respond(tab-port) {
+    flex-direction: column;
+    height: fit-content;
+  }
+
+  &__yoga {
+    @include respond(tab-port) {
+      flex-direction: column-reverse;
+    }
+  }
 
   &__content {
     width: 50%;
+    padding: 3rem 0;
+
+    @include respond(tab-port) {
+      width: 90%;
+    }
   }
 
   &__title {
@@ -20,14 +36,28 @@
     font-size: 2.2rem;
     padding: 1rem;
     margin-top: 1rem;
+    @include respond(tab-port) {
+      width: 100%;
+      font-size: 3rem;
+    }
+  }
+  &__inscription {
+    font-size: 1.5rem;
+    @include respond(tab-port) {
+      font-size: 1.8rem;
+    }
   }
   &__img {
-    height: 100vh;
+    min-height: 100vh;
     width: 50%;
 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
   &__price {
     text-align: center;
@@ -36,17 +66,33 @@
   }
 }
 
-.climbing__img {
-  background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/ruta-3.jpg');
+.img__1 {
+  position: relative;
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
   }
+  @include respond(tab-port) {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
 }
-.yoga__img {
-  background-image: linear-gradient(to right bottom, rgba(4, 255, 104, 0.6), rgba(5, 126, 247, 0.6)), url('/images/yoga-1.jpg');
+.img__2 {
+  position: relative;
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+  }
+  @include respond(tab-port) {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+}
+.member__img {
+  position: relative;
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+  @include respond(tab-port) {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 }
