--- a/src/components/organisms/grid.module.scss
+++ b/src/components/organisms/grid.module.scss
@@ -1,9 +1,8 @@
 @import '/src/sass/variables';
+@import '/src/sass/mixins';
 
 .grid {
-  width: 85%;
-  margin: 0 auto;
-
+  width: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 1rem 2rem;
   border-radius: 6px;
@@ -21,6 +20,9 @@
   &__description {
     color: $cold-gray-600;
     font-weight: 600;
+    @include respond(tab-port) {
+      font-size: 1.8rem;
+    }
   }
 
   &__price {
