--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
 
   // This defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
