--- a/src/app/prices/page.module.scss
+++ b/src/app/prices/page.module.scss
@@ -19,6 +19,10 @@
   }
 
   &__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 50%;
     padding: 3rem 0;
 
