--- a/src/components/organisms/grid.module.scss
+++ b/src/components/organisms/grid.module.scss
@@ -3,12 +3,13 @@
 
 .grid {
   width: 100%;
+  max-width: 500px;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 1rem 2rem;
   border-radius: 6px;
   display: grid;
   grid-template-columns: [first] 75% [scond]auto;
-  grid-template-rows: repeat(8, 6rem [col-start]);
+  grid-auto-rows: 6rem;
 }
 
 .item {
@@ -26,7 +27,7 @@
   }
 
   &__price {
-    text-align: center;
+    text-align: right;
     color: $green-600;
     font-weight: 600;
   }
