update big desktop bg

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -30,7 +30,7 @@ body {
     margin: 0 auto;
     max-width: 1600px;
 
-    background-image: linear-gradient(to right bottom, rgba(224, 234, 252, 0.8), rgba(207, 222, 243, 0.8)), url(../../public/images/art-mountain.png);
+    background-image: linear-gradient(to left top, rgba(4, 255, 104, 0.8), rgba(5, 126, 247, 0.8)), url(../../public/images/art-mountain.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
