--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -43,6 +43,7 @@ $facebook-gradient: linear-gradient(to bottom, #00c6ff, #0072ff);
 $instagram-gradient: linear-gradient(45deg, #833ab4, #fd1d1d, #fcb045);
 $rainbow-blue-gradient: linear-gradient(to right bottom, #04ff68, #057ef7);
 $man-of-steel-gradient: linear-gradient(to right bottom, #780206, #061161);
+$moor-gradient: linear-gradient(to right bottom, #ece9e6, #fff);
 
 // FONT
 $default-font-size: 1.6rem;
